--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
     "url": "git+https://github.com/tub-aiglart/web.git"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.5.3",
+    "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@tub/css": "github:tub-aiglart/css",
-    "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
+    "cross-env": "^5.2.1",
+    "dotenv": "^8.1.0",
     "node-sass": "^4.12.0",
-    "nuxt": "^2.8.0",
+    "nuxt": "^2.10.0",
     "nuxt-env": "^0.1.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.3.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.15.1",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "nodemon": "^1.19.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "nodemon": "^1.19.3"
   }
 }
